web: small ux tweaks. fix the cursor on chrome. make the top bar work better on small screens (#2981)

--- a/web/src/index.scss
+++ b/web/src/index.scss
@@ -22,6 +22,7 @@ body {
 
 code {
   font-family: $font-monospace;
+  cursor: text;
 }
 
 ul {
